--- a/genie-client/public/index.html
+++ b/genie-client/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript" src="https://widget.instabot.io/jsapi/rokoInstabot.js" crossorigin>
+      apiKey: "iNaFp81BQM6TBmzFj0pYR9kFP3JjQiayjSEsIjIoedk="
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
